[package]
name = "nnsdao_sdk_basic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ic-cdk = "0.5.1"
ic-cdk-macros = "0.5.1"
ic-types = "0.3.0"
serde = "1.0.126"
serde_derive = "1.0.126"
candid = "0.7.4"
async-trait = "0.1.56"
actix-rt = "*"
futures = "0.3"