[package]
name = "nnsdao_sdk_basic"
version = "0.1.0"
authors = ["NNSDAO"]
edition = "2021"
description = "Basic functionality to build a DAO."
license = "Apache-2.0"
keywords = ["nnsdao", "dao", "ICP", "dfinity", "internet-computer"]
readme = "README.md"
repository = "https://github.com/NnsDao/nnsdao_sdk"
documentation = "https://docs.rs/nnsdao_sdk_basic"
include = ["src", "Cargo.toml", "LICENSE", "README.md"]


[dependencies]
ic-cdk = "0.5.1"
ic-cdk-macros = "0.5.1"
ic-types = "0.3.0"
serde = "1.0.126"
serde_derive = "1.0.126"
candid = "0.7.4"
async-trait = "0.1.56"
actix-rt = "*"
futures = "0.3"